hphp/test/zend/good/Zend/tests/bug49472.php.expectf

Fatal error: Cannot override previously defined constant ia::c in FooBar in %s/bug49472.php on line 11
